--- a/update.html
+++ b/update.html
@@ -50,7 +50,8 @@
             
 
         </script>
-
+        <p>Bryan Wilson KHENG 1155130831</p>
+        <br>
         <h1>Update Event</h1>
 
         <form onsubmit="onSubmit()">
